# Localization-of-quadruped-robot

./: .gitignore  README.md
robot_sim_sose/: Readme.txt  docker-compose.yml  image_saver.py
robot_sim_sose/.devcontainer/: Dockerfile  check.py  devcontainer.json
robot_sim_sose/robot_sim_sose/: Readme.txt
robot_sim_sose/robot_sim_sose/.devcontainer/: bridge_config.yaml  check.py
robot_sim_sose/robot_sim_sose/src/xgo_description/: CMakeLists.txt  package.xml
robot_sim_sose/robot_sim_sose/src/xgo_description/urdf/: xgo.urdf
robot_sim_sose/src/xgo_description/: CMakeLists.txt
robot_sim_sose/src/xgo_description/launch/: gazebo.launch.py  gazebo_fast.launch.py
robot_sim_sose/src/xgo_description/urdf/: xgo.urdf
robot_sim_sose/src/xgo_description/worlds/: slam_test_world.sdf
